<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/mask">

    <android.support.v7.widget.CardView
        android:id="@+id/wallet_summary_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@android:color/white">

        <LinearLayout
            android:id="@+id/track_history_item_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/total_earnings"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:text="@string/total_earning"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.2dp"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="15dp"
                android:background="@color/mask"

                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="27dp"
                android:layout_marginStart="27dp"
                android:text="@string/next_deposit"
                android:textColor="@color/light_grey" />

            <TextView
                android:id="@+id/driver_nameID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:drawablePadding="15dp"
                android:drawableStart="@drawable/_0002_next_deposit"
                android:maxLines="3"
                android:text="@string/rs_240"

                />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.2dp"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="15dp"
                android:background="@color/mask" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="27dp"
                android:layout_marginStart="27dp"
                android:text="@string/week"
                android:textColor="@color/light_grey" />

            <TextView
                android:id="@+id/vehicle_numberID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="15dp"
                android:drawableStart="@drawable/_0001_week"
                android:maxLines="3"
                android:text="@string/made_during" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.2dp"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="15dp"
                android:background="@color/mask" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="27dp"
                android:layout_marginStart="27dp"
                android:text="@string/earnings_this_week"
                android:textColor="@color/light_grey" />

            <TextView
                android:id="@+id/paymentID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="15dp"
                android:drawableStart="@drawable/_0003_payment"
                android:text="@string/rs_240"

                />

        </LinearLayout>
    </android.support.v7.widget.CardView>

    <ListView
        android:id="@+id/wallet_deposits_listview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>