<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:background="@android:color/white"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/trip_details_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@android:color/white"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:text="@string/trip_end_msg"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/gray_light_dark">

        </TextView>

        <TextView
            android:id="@+id/total_bill_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/total_bill_is"
            android:textAppearance="?android:attr/textAppearanceLarge" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/rate_this_sender"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/gray_light_dark" />

        <RatingBar
            android:id="@+id/ratingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp" />

        <TextView
            android:id="@+id/trip_coupon_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="center"
            android:text="@string/discount_text"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/gray_light_dark"
            android:visibility="gone" />

        <Button
            android:id="@+id/submit_rating_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="30dp"
            android:background="@drawable/button_pressed_blue"
            android:text="@string/submit_rating"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/loading_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="gone">

        <ProgressBar
            android:id="@+id/progressBar3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/progressBar3"
            android:layout_centerHorizontal="true"
            android:text="Please wait loading"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </RelativeLayout>
</RelativeLayout>