<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:background="@android:color/white">

    <ProgressBar
        android:id="@+id/progressBar4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" />

    <LinearLayout
        android:id="@+id/display_btn_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:visibility="visible">

        <TextView
            android:id="@+id/pickip_addrs_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/black" />


        <TextView
            android:id="@+id/pickup_duration_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center_horizontal"
            android:padding="1dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/reach_pic_loc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center_horizontal"
            android:padding="1dp"
            android:text="@string/reach_pick_to_start_trip"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/black_overlay" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/refresh_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/navigate_to_pickup_loc_btn"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:background="@color/bg"
            android:text="@string/navigate"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <Button
            android:id="@+id/refresh_btn"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@color/bg"
            android:text="@string/refresh"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/white"
            android:textStyle="bold" />
    </LinearLayout>

    <Button
        android:id="@+id/start_to_pic_btn"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_above="@+id/refresh_layout"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:background="@color/bg"
        android:text="@string/at_pic_loc"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

</RelativeLayout>
