<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/mask"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bottom_trip_relLyt"
        android:background="@android:color/transparent"
        android:orientation="vertical">

        <!--pickup details -->
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:visibility="gone"
            card_view:cardCornerRadius="4dp">

            <include layout="@layout/pickup_trip_request_layout" />
        </android.support.v7.widget.CardView>

        <ImageView
            android:id="@+id/down_arrow_imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:src="@drawable/_0000_arrow"
            android:visibility="gone" />


        <!--view pager details-->
        <android.support.v7.widget.CardView
            android:id="@+id/noDropLocationsMsg"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_margin="10dp"
            android:visibility="gone"
            card_view:cardBackgroundColor="@android:color/white"
            card_view:cardCornerRadius="4dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:maxLines="3"
                android:padding="10dp"
                android:text="Customer has not added drop location(s), please wait.." />


        </android.support.v7.widget.CardView>


        <!--view pager details-->
        <android.support.v7.widget.CardView
            android:id="@+id/trip_view_pager_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:visibility="visible"
            card_view:cardBackgroundColor="@android:color/white"
            card_view:cardCornerRadius="4dp">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <android.support.v4.view.ViewPager
                    android:id="@+id/trip_viewpager"
                    android:layout_width="match_parent"
                    android:layout_height="160dp" />

                <me.relex.circleindicator.CircleIndicator
                    android:id="@+id/indicator"
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:layout_gravity="bottom"
                    app:ci_drawable="@drawable/white_radius"
                    app:ci_height="6dp"
                    app:ci_width="6dp" />

            </FrameLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/bottom_trip_relLyt"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:layout_alignParentBottom="true"
        android:layout_margin="5dp">

        <!--End trip and accept-->
        <android.support.v7.widget.CardView
            android:id="@+id/bottom_trip_accept_lyt"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/trip_start_status_textview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:maxLines="1"
                    android:padding="5dp"
                    android:text="@string/trip_started"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/black" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_alignParentBottom="true"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/accept_trip_request"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:background="@color/bg"
                        android:text="@string/start_to_d"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@android:color/white" />

                    <Button
                        android:id="@+id/reject_trip_request"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:background="@color/gray_light_dark"
                        android:text="@string/reject"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/black_overlay"
                        android:visibility="gone" />

                    <Button
                        android:id="@+id/refreshTrip_btn"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:background="@color/gray_light_dark"
                        android:text="@string/refresh"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/black_overlay"
                        android:visibility="gone" />

                </LinearLayout>
            </RelativeLayout>

        </android.support.v7.widget.CardView>
    </RelativeLayout>


</RelativeLayout>
